# legal_system

./: .dockerignore  .env.example  .gitignore  .lighthouserc.json  .prettierignore  README.md  eslint.config.mjs  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  temp-licence.md  temp-wincpp.md  tsconfig.base.json  turbo.json
.github/: pull_request_template.md
.github/workflows/: build-dummy-desktop.yml  build-linux.yml  build-macos.yml  build-windows.yml  ci.yml  release-desktop.yml
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json  tauri.dummy.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/keys/: elms.license.example
apps/desktop/src-tauri/src/: backend_connection.rs  desktop_backup.rs  desktop_downloads.rs  external_links.rs  main.rs  ppo_portal.rs  sidecar.rs
scripts/: backup-postgres.sh  bundle-linux-deps.sh  bundle-macos-deps.sh  bundle-windows-deps.ps1  check-desktop-packaging-host.sh  check-lockfile.sh  deploy-cloud.sh  desktop-bundle-extras.mjs  desktop-resource-contract.mjs  generate-license.test.ts  generate-license.ts  i18n-audit.ts  package-desktop-linux.sh  package-desktop-windows-cross.sh  release-desktop-local.sh  restore-postgres.sh  schema-runtime-usage-audit.ts  smoke-windows-runtime.ps1  tsconfig.json  verify-desktop-resources.mjs  verify-desktop-resources.sh  verify-desktop-runtime.sh  verify-linux-packages.sh  verify-macos-dmg.sh  verify-packaged-desktop-tree.mjs  verify-windows-installer.mjs  verify-windows-installer.ps1
(+108 files in other folders)
