[package]
name = "elms-desktop"
version = "0.1.0"
description = "Egyptian Legal Management System desktop shell"
authors = ["Codex"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.9.1", features = [] }
tauri-plugin-shell = "2.3.3"
tauri-plugin-dialog = "2"
log = "0.4"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
